--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     </head>
     <body>
-        <p>Me llamo Mario Domenech Llobell</p>
+        <p>Me llamo Domenech Llobell</p>
         <p>Estudie segundo de bachillerato en el IES San Vicente Ferrer</p>
         <p>Quiero aprender a programar apps y paginas web</p>
         <p>Me gustaria trabajar en el mundo de los videojuegos y/o desarrollo de software</p>
